# se-toolkit-lab-8

./: Caddyfile  REPORT.md  docker-compose.yml  docker-compose.yml.bak2  docker-compose.yml.old  run_nanobot.sh
.qwen/: oauth_creds.json
backend/: Dockerfile  create_tables.py
backend/app/: database.py  main.py
backend/app/routers/: health.py  items.py
caddy/: Caddyfile
mcp/: observability_server.py
nanobot/: .dockerignore  Dockerfile  config.json  config.json.bak  entrypoint.py  pyproject.toml  run.py  setup.py
nanobot/mcp/mcp_observability/: __main__.py  pyproject.toml  server.py
nanobot/nanobot/: __main__.py
nanobot/nanobot_webchat/: __init__.py
nanobot/workspace/: SKILL.md
nanobot/workspace/cron/: jobs.json
nanobot/workspace/sessions/: cli_direct.jsonl  cron_health-check.jsonl  webchat_0896deb2-898d-4b88-a06a-65a700af1f31.jsonl  webchat_4efda875-e7d1-41b9-a3f7-0a61780516ee.jsonl  webchat_90d72b6e-08ee-40b6-bce8-cbe3b06cae7a.jsonl  webchat_98c259e4-6970-4594-9d42-4302f096880f.jsonl  webchat_e3a7537b-34b8-4848-9559-595de5e48ac9.jsonl
nanobot/workspace/skills/cron/: SKILL.md
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
otel/: otel-collector-config.yaml
srv/flutter/: index.html  main.dart.js
web-client/: index.html
web-client/flutter/: index.html  main.dart.js
