[project]
name = "nanobot"
version = "0.1.0"
description = "Nanobot agent for LMS integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nanobot-ai>=0.1.4.post6",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
