[project]
name = "edu-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "nanobot>=0.1.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
nanobot = { git = "https://github.com/innopolis-universe/nanobot.git" }

[tool.uv.workspace]
members = ["nanobot_webchat"]
