[project]
name = "mcp-observability"
version = "0.1.0"
description = "MCP server for VictoriaLogs and VictoriaTraces observability tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_observability"]
